--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/11/2020 11:29:00 AM</p>
+    <p class="lastupdate">09/11/2020 11:34:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">62.2&#176;F</td>
+        <td class="data">62.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">62.2&#176;F</td>
+        <td class="data">62.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">62.2&#176;F</td>
+        <td class="data">62.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">49.9&#176;F</td>
+        <td class="data">49.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">64%</td>
+        <td class="data">63%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.046 inHg (0.001)</td>
+        <td class="data">30.046 inHg (-0.001)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph S (180&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:28:46 AM">
-            62.2</span><br/>
+          <span title="11:33:44 AM">
+            62.5</span><br/>
           <span title="06:21:27 AM">
             48.2</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="11:28:46 AM" class="hival">
-            62.2</span>
+          <span title="11:33:44 AM" class="hival">
+            62.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:04:49 AM">
             88</span><br/>
-          <span title="11:27:42 AM">
-            64</span>
+          <span title="11:31:58 AM">
+            63</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:04:49 AM (Friday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">9 days, 20 hours, 42 minutes</td>
+      <td class="data">9 days, 20 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">9 days, 20 hours, 42 minutes</td>
+      <td class="data">9 days, 20 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
