--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/11/2020 11:39:00 AM</p>
+    <p class="lastupdate">09/11/2020 11:44:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">62.9&#176;F</td>
+        <td class="data">63.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">62.9&#176;F</td>
+        <td class="data">63.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">62.9&#176;F</td>
+        <td class="data">63.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.1&#176;F</td>
+        <td class="data">50.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.041 inHg (-0.007)</td>
+        <td class="data">30.040 inHg (-0.011)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SW (225&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:38:52 AM">
-            62.9</span><br/>
+          <span title="11:43:08 AM">
+            63.3</span><br/>
           <span title="06:21:27 AM">
             48.2</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="11:38:52 AM" class="hival">
-            62.9</span>
+          <span title="11:43:08 AM" class="hival">
+            63.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="11:14:35 AM">
-            50.3</span><br/>
+          <span title="11:43:56 AM">
+            50.5</span><br/>
           <span title="06:53:23 AM">
             43.9</span>
         </td>
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:04:49 AM">
             88</span><br/>
-          <span title="11:31:58 AM">
-            63</span>
+          <span title="11:43:04 AM">
+            62</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:04:49 AM (Friday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">9 days, 20 hours, 52 minutes</td>
+      <td class="data">9 days, 20 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">9 days, 20 hours, 52 minutes</td>
+      <td class="data">9 days, 20 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
