--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/11/2020 12:04:00 PM</p>
+    <p class="lastupdate">09/11/2020 12:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">65.1&#176;F</td>
+        <td class="data">65.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">65.1&#176;F</td>
+        <td class="data">65.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">65.1&#176;F</td>
+        <td class="data">65.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.9&#176;F</td>
+        <td class="data">51.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.036 inHg (-0.016)</td>
+        <td class="data">30.033 inHg (-0.018)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SSE (158&#176;)</td>
+        <td class="data">1 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -90,7 +90,7 @@
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">43%</td>
+        <td class="data">42%</td>
       </tr>
     </tbody>
   </table>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:03:28 PM">
-            65.1</span><br/>
+          <span title="12:08:44 PM">
+            65.7</span><br/>
           <span title="06:21:27 AM">
             48.2</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:03:28 PM" class="hival">
-            65.1</span>
+          <span title="12:08:44 PM" class="hival">
+            65.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="11:59:00 AM">
-            50.9</span><br/>
+          <span title="12:08:44 PM">
+            51.4</span><br/>
           <span title="06:53:23 AM">
             43.9</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          162
+          163
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">9 days, 21 hours, 17 minutes</td>
+      <td class="data">9 days, 21 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">9 days, 21 hours, 17 minutes</td>
+      <td class="data">9 days, 21 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
